--- a/controlpanel/plugins/PanelWidget.ui
+++ b/controlpanel/plugins/PanelWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>250</width>
-    <height>239</height>
+    <width>340</width>
+    <height>295</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -54,6 +54,10 @@
        <property name="text">
         <string notr="true">rem</string>
        </property>
+       <property name="icon">
+        <iconset theme="list-remove">
+         <normaloff>.</normaloff>.</iconset>
+       </property>
       </widget>
      </item>
      <item>
@@ -76,6 +80,9 @@
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
+     <property name="tabShape">
+      <enum>QTabWidget::Rounded</enum>
+     </property>
      <property name="currentIndex">
       <number>2</number>
      </property>
@@ -86,8 +93,12 @@
       </size>
      </property>
      <widget class="QWidget" name="tabWidgetPage1">
+      <attribute name="icon">
+       <iconset theme="transform-move">
+        <normaloff>.</normaloff>.</iconset>
+      </attribute>
       <attribute name="title">
-       <string notr="true"/>
+       <string notr="true">Location</string>
       </attribute>
       <attribute name="toolTip">
        <string>Location</string>
@@ -197,8 +208,12 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabWidgetPage2">
+      <attribute name="icon">
+       <iconset theme="preferences-desktop-display">
+        <normaloff>.</normaloff>.</iconset>
+      </attribute>
       <attribute name="title">
-       <string notr="true"/>
+       <string notr="true">Appearance</string>
       </attribute>
       <attribute name="toolTip">
        <string>Appearance</string>
@@ -249,6 +264,10 @@
             <property name="text">
              <string>...</string>
             </property>
+            <property name="icon">
+             <iconset theme="preferences-desktop-color">
+              <normaloff>.</normaloff>.</iconset>
+            </property>
            </widget>
           </item>
           <item>
@@ -280,8 +299,12 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabWidgetPage3">
+      <attribute name="icon">
+       <iconset theme="preferences-plugin">
+        <normaloff>.</normaloff>.</iconset>
+      </attribute>
       <attribute name="title">
-       <string notr="true"/>
+       <string notr="true">Plugins</string>
       </attribute>
       <attribute name="toolTip">
        <string>Plugins</string>
@@ -316,12 +339,20 @@
            <property name="text">
             <string notr="true">add</string>
            </property>
+           <property name="icon">
+            <iconset theme="list-add">
+             <normaloff>.</normaloff>.</iconset>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QToolButton" name="tool_remplugin">
            <property name="text">
             <string notr="true">rem</string>
+           </property>
+           <property name="icon">
+            <iconset theme="list-remove">
+             <normaloff>.</normaloff>.</iconset>
            </property>
           </widget>
          </item>
@@ -346,12 +377,20 @@
            <property name="text">
             <string notr="true">up</string>
            </property>
+           <property name="icon">
+            <iconset theme="go-up">
+             <normaloff>.</normaloff>.</iconset>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QToolButton" name="tool_downplugin">
            <property name="text">
             <string notr="true">dn</string>
+           </property>
+           <property name="icon">
+            <iconset theme="go-down">
+             <normaloff>.</normaloff>.</iconset>
            </property>
           </widget>
          </item>
