--- a/controlpanel/src/widgets/PanelWidget.ui
+++ b/controlpanel/src/widgets/PanelWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>340</width>
-    <height>295</height>
+    <height>321</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -52,7 +52,7 @@
      <item>
       <widget class="QToolButton" name="tool_rm">
        <property name="text">
-        <string notr="true">rem</string>
+        <string notr="true"/>
        </property>
        <property name="icon">
         <iconset theme="list-remove">
@@ -84,7 +84,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <property name="iconSize">
       <size>
@@ -94,14 +94,11 @@
      </property>
      <widget class="QWidget" name="tabWidgetPage1">
       <attribute name="icon">
-       <iconset theme="transform-move">
+       <iconset theme="preferences-desktop">
         <normaloff>.</normaloff>.</iconset>
       </attribute>
       <attribute name="title">
-       <string notr="true">Location</string>
-      </attribute>
-      <attribute name="toolTip">
-       <string>Location</string>
+       <string notr="true">Configure</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout">
        <property name="labelAlignment">
@@ -165,7 +162,7 @@
        <item row="3" column="1">
         <widget class="QSpinBox" name="spin_plength">
          <property name="suffix">
-          <string>% length</string>
+          <string>%</string>
          </property>
          <property name="minimum">
           <number>1</number>
@@ -174,19 +171,6 @@
           <number>100</number>
          </property>
         </widget>
-       </item>
-       <item row="5" column="0">
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_4">
@@ -205,40 +189,47 @@
          </property>
         </widget>
        </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="tabWidgetPage2">
-      <attribute name="icon">
-       <iconset theme="preferences-desktop-display">
-        <normaloff>.</normaloff>.</iconset>
-      </attribute>
-      <attribute name="title">
-       <string notr="true">Appearance</string>
-      </attribute>
-      <attribute name="toolTip">
-       <string>Appearance</string>
-      </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <property name="leftMargin">
-        <number>2</number>
-       </property>
-       <property name="topMargin">
-        <number>2</number>
-       </property>
-       <property name="rightMargin">
-        <number>2</number>
-       </property>
-       <property name="bottomMargin">
-        <number>2</number>
-       </property>
-       <item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Length:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="5" column="0" colspan="2">
         <widget class="QCheckBox" name="check_autohide">
          <property name="text">
           <string>Auto-hide Panel</string>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="4" column="0" colspan="2">
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>5</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="6" column="0" colspan="2">
         <widget class="QGroupBox" name="group_customcolor">
          <property name="title">
           <string>Use Custom Color</string>
@@ -246,19 +237,7 @@
          <property name="checkable">
           <bool>true</bool>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <property name="leftMargin">
-           <number>2</number>
-          </property>
-          <property name="topMargin">
-           <number>2</number>
-          </property>
-          <property name="rightMargin">
-           <number>2</number>
-          </property>
-          <property name="bottomMargin">
-           <number>2</number>
-          </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <widget class="QToolButton" name="tool_selectcolor">
             <property name="text">
@@ -272,6 +251,9 @@
           </item>
           <item>
            <widget class="QLabel" name="label_color_sample">
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
             <property name="text">
              <string>Sample</string>
             </property>
@@ -283,31 +265,15 @@
          </layout>
         </widget>
        </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tabWidgetPage3">
+     <widget class="QWidget" name="tabWidgetPage2">
       <attribute name="icon">
        <iconset theme="preferences-plugin">
         <normaloff>.</normaloff>.</iconset>
       </attribute>
       <attribute name="title">
        <string notr="true">Plugins</string>
-      </attribute>
-      <attribute name="toolTip">
-       <string>Plugins</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <property name="leftMargin">
