--- a/controlpanel/src/mainWindow.ui
+++ b/controlpanel/src/mainWindow.ui
@@ -10,6 +10,9 @@
     <height>800</height>
    </rect>
   </property>
+  <property name="windowIcon">
+   <iconset theme="preferences-desktop"/>
+  </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -40,6 +43,9 @@
    <addaction name="actionMonitor"/>
   </widget>
   <action name="actionSave">
+   <property name="icon">
+    <iconset theme="document-save"/>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
@@ -51,6 +57,9 @@
    </property>
   </action>
   <action name="actionBack">
+   <property name="icon">
+    <iconset theme="go-previous-view"/>
+   </property>
    <property name="text">
     <string>Back to settings</string>
    </property>
@@ -65,6 +74,9 @@
    </property>
   </action>
   <action name="actionMonitor">
+   <property name="icon">
+    <iconset theme="preferences-desktop-display"/>
+   </property>
    <property name="text">
     <string notr="true">Monitor</string>
    </property>
