--- a/open/src/LDialog.ui
+++ b/open/src/LDialog.ui
@@ -10,12 +10,30 @@
     <height>230</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>300</width>
+    <height>230</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>300</width>
+    <height>230</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Open With...</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="lumina-open.qrc">
-    <normaloff>:/icons/find.png</normaloff>:/icons/find.png</iconset>
+   <iconset theme="find">
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -93,38 +111,19 @@
      <widget class="QWidget" name="page_avail">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QComboBox" name="combo_apps"/>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
+        <widget class="QComboBox" name="combo_apps">
+         <property name="minimumSize">
           <size>
-           <width>20</width>
-           <height>40</height>
+           <width>0</width>
+           <height>24</height>
           </size>
          </property>
-        </spacer>
+        </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="page_custom">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_goodbin">
-         <property name="text">
-          <string notr="true"/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="lumina-open.qrc">:/icons/bad.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QLineEdit" name="line_bin">
          <property name="placeholderText">
@@ -132,29 +131,29 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_goodbin">
+         <property name="text">
+          <string notr="true"/>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="2">
         <widget class="QToolButton" name="tool_findBin">
+         <property name="toolTip">
+          <string>Find Application Binary</string>
+         </property>
          <property name="text">
           <string>Find</string>
          </property>
          <property name="icon">
-          <iconset resource="lumina-open.qrc">
-           <normaloff>:/icons/find.png</normaloff>:/icons/find.png</iconset>
+          <iconset theme="find">
+           <normaloff>.</normaloff>.</iconset>
          </property>
         </widget>
-       </item>
-       <item row="1" column="1">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -165,29 +164,16 @@
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>25</height>
+           <height>24</height>
           </size>
          </property>
          <property name="iconSize">
           <size>
-           <width>20</width>
-           <height>20</height>
+           <width>16</width>
+           <height>16</height>
           </size>
          </property>
         </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -221,8 +207,8 @@
         <string>OK</string>
        </property>
        <property name="icon">
-        <iconset resource="lumina-open.qrc">
-         <normaloff>:/icons/apply.png</normaloff>:/icons/apply.png</iconset>
+        <iconset theme="ok">
+         <normaloff>.</normaloff>.</iconset>
        </property>
        <property name="toolButtonStyle">
         <enum>Qt::ToolButtonTextBesideIcon</enum>
@@ -235,8 +221,8 @@
         <string>Cancel</string>
        </property>
        <property name="icon">
-        <iconset resource="lumina-open.qrc">
-         <normaloff>:/icons/cancel.png</normaloff>:/icons/cancel.png</iconset>
+        <iconset theme="cancel">
+         <normaloff>.</normaloff>.</iconset>
        </property>
        <property name="toolButtonStyle">
         <enum>Qt::ToolButtonTextBesideIcon</enum>
@@ -247,8 +233,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="lumina-open.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
