--- a/controlpanel/src/pages/options/page_session_options.ui
+++ b/controlpanel/src/pages/options/page_session_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>512</width>
-    <height>351</height>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,6 +26,44 @@
    <property name="bottomMargin">
     <number>6</number>
    </property>
+   <item row="3" column="0" colspan="2">
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="title">
+      <string/>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_20">
+      <item>
+       <spacer name="horizontalSpacer_18">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="push_session_resetSysDefaults">
+        <property name="text">
+         <string>Restore system defaults</string>
+        </property>
+        <property name="icon">
+         <iconset theme="view-refresh"/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
    <item row="0" column="1" rowspan="2">
     <layout class="QFormLayout" name="formLayout_3">
      <property name="fieldGrowthPolicy">
@@ -53,6 +91,9 @@
          </property>
          <property name="text">
           <string notr="true">...</string>
+         </property>
+         <property name="icon">
+          <iconset theme="help-about"/>
          </property>
          <property name="autoRaise">
           <bool>true</bool>
@@ -97,6 +138,9 @@
          </property>
          <property name="text">
           <string notr="true">...</string>
+         </property>
+         <property name="icon">
+          <iconset theme="help-about"/>
          </property>
          <property name="autoRaise">
           <bool>true</bool>
@@ -175,62 +219,17 @@
      <item row="8" column="1">
       <widget class="QLineEdit" name="lock_cmd"/>
      </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Application style</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <widget class="QComboBox" name="combo_styles"/>
+     </item>
     </layout>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="font">
-      <font>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="title">
-      <string>Reset Desktop Settings</string>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_20">
-      <item>
-       <spacer name="horizontalSpacer_18">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="push_session_resetSysDefaults">
-        <property name="text">
-         <string>Restore system defaults</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="push_session_resetLuminaDefaults">
-        <property name="text">
-         <string>Restore Lumina defaults</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_17">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
-    </widget>
    </item>
   </layout>
  </widget>
